# erlang-otp

./: Makefile.in  OTP_VERSION  configure  configure.src  otp_versions.table  renovate.json5
.github/: scorecard.yaml  zizmor.yml
.github/requirements/: mdformat-in.txt.license  mdformat.txt
.github/scripts/: otp-compliance.es
.github/workflows/: github-actions-checker.yaml  license-scanner.yaml  main.yaml  openvex-sync.yml  ossf-compiler-flags-scanner.yaml  osv-scanner-scheduled.yml  pr-comment.yaml  renovate-vendored-deps.yaml  reusable-build-flavours.yaml  reusable-build-ios.yaml  reusable-build-macos.yaml  reusable-build-otp.yaml  reusable-build-windows.yaml  reusable-check-files.yaml  reusable-documentation.yaml  reusable-freebsd.yaml  reusable-openbsd.yaml  (+15 more)
HOWTO/: DOCUMENTATION.md  INSTALL.md  SBOM.md
erts/: config.h.in  configure  configure.ac  crypto.ac  vsn.mk
lib/crypto/: configure  configure.ac  vsn.mk
lib/crypto/c_src/: Makefile.in  openssl_config.h
lib/crypto/doc/: notes.md
lib/crypto/doc/src/: notes.xml
lib/crypto/src/: crypto.erl
lib/crypto/test/: crypto_property_test_SUITE.erl
lib/crypto/test/property_test/: crypto_ng_api_stateful.erl  crypto_prop_generators.erl
make/: dep.mk  doc.mk  ex_doc.exs  ex_doc_wrapper.in  markdown_to_man.escript  openvex.table  otp_version_tickets  otp_version_tickets_in_merge  otp_version_tickets_in_merge.license  patch_apply_adjust_docs
scripts/: license-header.es  run-dialyzer
vex/: otp-26.openvex.json  otp-27.openvex.json  otp-28.openvex.json  otp-29.openvex.json
xcomp/: erl-xcomp-arm-android.conf
(+1122 files in other folders)
